Fix horizontal scroll

--- a/public/public/global.css
+++ b/public/public/global.css
@@ -8,6 +8,8 @@ html {
 
 body {
   width: 100%;
+  margin: 0;
+  margin-bottom: 24px;
 }
 
 *:not(a) {
